feat: add k8s support
